Fix logo is visible in `footer`

--- a/src/assets/styles/organisms/_footer.scss
+++ b/src/assets/styles/organisms/_footer.scss
@@ -40,5 +40,6 @@
 }
 
 .footer-logo {
+  width: 100%;
   max-width: $spacer * 2;
 }
